# saleor-internal-actions

./: .env  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.plugins  LICENSE  README.md  README.rst  RELEASING.md  build-latest-master.sh  common.env  docker-compose.yml  drop_test_databases.sh  nginx.conf  opentracing-python-xray.gpg  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependabot.yml
.github/workflows/: build-push-image-multi-platform.md  build-push-image-multi-platform.yaml  build.yml  build_deploy.yml  deploy_core_cron.yaml  deploy_dev.yaml  deploy_master_cron.yaml  notify-slack.md  (+11 more)
dogstatsd-metric-exporter/: .gitignore  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.md  USAGE.rst  docker-compose.yml  setup.cfg  setup.py
grant-license-checker/: README.md  action.yaml  pyproject.toml
grant-license-checker/grant_license_checker/cmd/: grant_summarize.py
grant-license-checker/grant_license_checker/models/: grant_json.py
grant-license-checker/grant_license_checker/renderers/: __init__.py  base.py  html.py  tsv.py  tty.py
grant-license-checker/grant_license_checker/renderers/tests/: test_base.py  test_html.py  test_tty.py
grant-license-checker/grant_license_checker/tests/fixtures/: .gitignore  README.md  generate.sh  sample-grant-report.json  sample-sbom-v1.5.json  sample-sbom-v1.6.json
grant-license-checker/scripts/: download-grant.sh
grant-license-checker/src/grant_license_checker/: conftest.py
grant-license-checker/src/grant_license_checker/cli_utils/: files.py
grant-license-checker/src/grant_license_checker/cli_utils/tests/: test_files.py
grant-license-checker/src/grant_license_checker/cmd/: grant_summarize.py
grant-license-checker/src/grant_license_checker/renderers/: tsv.py
grant-license-checker/src/grant_license_checker/renderers/tests/: test_html.py  test_tty.py
patches/: README.rst  allowed_clients.patch  jwt.patch  limits_implement_gql_types_stub.patch  limits_test_shop_disable_limits_test.patch  python_config.patch  saleor.patch  temporary.patch  tests.patch  tests_fixtures.patch  tests_settings.patch  tests_tests.patch  xray.patch
request-vault-token/: README.md  action.yaml
saleor/: celeryconf.py  gunicorn_config.py  settings.py  settings_multitenant.py  urls_prometheus_wrapper.py
sbom-generator/: README.md  UPGRADING.md  action.yaml
tenants/: datadog.py  emails.py  jwt.py  middleware.py  models.py  sentry.py  storages.py  urls.py  utils.py  views.py
tests/: conftest.py  settings.py  settings_multitenant.py  test_core.py
(+115 files in other folders)
