[project]
name = "grant-license-checker"
version = "0.2.0"
description = "Generates a report of licenses used by main and transient dependencies, and checks for compliance issues."
authors = [
    { name = "Saleor Commerce", email = "hello@saleor.io>" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "jinja2>=3.1.5,<4",
    "pydantic>=2.8.2,<3",
]

[project.scripts]
grant-summarize = "grant_license_checker.cmd.grant_summarize:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
]

[build-system]
# Note: uv_build version constraints must match the uv version, e.g., if you have
#       'uv==0.11.3' installed but you put 'uv_build>=0.10.0,<0.11.0' then the
#       version will mismatch (which will prevent uv from installing a "compatible"
#       uv_build version).
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "3 weeks"

[tool.uv.exclude-newer-package]
# To customize on a per-package basis, for example you can do this:
# django = "2026-04-07T14:30:00Z"

[tool.coverage.run]
omit = [
    # Omit tests.
    "*/tests/*",
    ]

[tool.coverage.report]
exclude_also = [
    # Ignore debug-only code.
    "def __repr__",
    "if self\\.debug",

    # Ignore defensive assertion code.
    "raise AssertionError",
    "raise NotImplementedError",

    # Ignore non-runnable code.
    "if 0:",
    "if __name__ == .__main__.:",

    # Ignore abstract methods.
    "@(abc\\.)?abstractmethod",
    ]

